# experiments-2025-hcaixia-automl-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  slurm_run.sh
chroma/: __init__.py  __main__.py
data/: 300_questions.csv  __init__.py  __main__.py  generate_gold_standards.py  test.csv  train.csv
documents/: Approf_Accesso ai servizi per la gravidanza.txt  Approf_Accesso all’Ospedale per il parto.txt  Approf_Allattamento e Alimentazione del bambino.txt  Approf_Assicurare le cure sanitarie.txt  Approf_Assistenza ostetrica al parto.txt  Approf_Assitenza ostetrica alla gravidanza.txt  Approf_Assunzione di acido folico.txt  Approf_Citomegalovirus.txt  Approf_Contatto pelle a pelle.txt  Approf_Controlli.txt  Approf_Diabete gestazionale.txt  Approf_Donaziona sangue cordonale.txt  Approf_Donne con gruppo sanguigno RH negativo.txt  Approf_Ecografia ostetrica.txt  Approf_Farmaci.txt  Approf_Incontri di Accompagnamento alla Nascita (IAN).txt  Approf_Ipotiroidismo.txt  Approf_La cura dell_igiene del bambino.txt  Approf_Le Cure Amiche della Madre.txt  Approf_Le cure che nutrono nei primi 1000 giorni.txt  Approf_Monitoraggio della gravidanza a termine.txt  Approf_Nuova gravidanza dopo taglio cesareo.txt  Approf_Obesità.txt  Approf_Opportunità e diritti per la maternità e paternità, tutela e congedi parentali .txt  Approf_Parto in acqua.txt  Approf_Parto in anonimato.txt  Approf_Prevenzione infezioni.txt  Approf_Promozione e mantenimento della salute del pavimento pelvico.txt  Approf_Sala parto Cavalese.txt  Approf_Sala parto Cles.txt  Approf_Sala parto Rovereto.txt  Approf_Sala parto Trento.txt  Approf_Sintomi e segni che richiedono controllo urgente.txt  Approf_Sintomi fisiologici comuni in gravidanza.txt  Approf_Sostegno da mamma a mamma.txt  Approf_Stili di vita sani in gravidanza.txt  Approf_Streptococco.txt  Approf_Toxoplasmosi.txt  Approf_Vaccinazioni in gravidanza.txt  Approf_Varicella.txt  (+1138 more)
experiments/: __init__.py  __main__.py  accuracy.py  constants.py  evaluation.py  generation.py  gold_answers.py  metrics.py  results_recording.py  retrievers.py  runner.py
figures/: __init__.py  __main__.py  generate_figures.py
qdrant/: __main__.py
results/: __init__.py  cache_results.csv  incumbents.csv  incumbents.csv_results.csv  results.csv
utils/: __init__.py
