[tool.poetry]
name = "experiments"
version = "0.1.0"
description = "Experiments for the paper \"Enhancing Trustworthy Text Generation in Digital Health\" for AIME 2025"
authors = ["Matteo Magnini <matteo.magnini@unibo.it>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
smac = "^2.3.0"
configspace = "^1.2.1"
fire = "^0.7.0"
chromadb = "^0.6.3"
pandas = "^2.2.3"
langchain-text-splitters = "^0.3.5"
langchain-ollama = "^0.2.2"
langchain-chroma = "^0.2.1"
matplotlib = "^3.10.0"
langchain = "^0.3.16"
langchain-community = "^0.3.16"
rank-bm25 = "^0.2.2"
llama-index = "^0.12.14"
llama-index-embeddings-huggingface = "^0.5.1"
einops = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
