[project]
name = "experiments"
version = "0.1.0"
description = "Experiments for the paper \"Enhancing Trustworthy Text Generation in Digital Health\" for AIME 2025"
readme = "README.md"
requires-python = ">=3.12,<4"
license = { text = "Apache-2.0" }
authors = [
	{ name = "Matteo Magnini", email = "matteo.magnini@unibo.it" },
]
dependencies = [
	"smac>=2.4.0,<3",
	"configspace>=1.2.2,<2",
	"fire>=0.7.1,<0.8",
	"chromadb>=1.5.9,<2",
	"pandas>=3.0.3,<4",
	"langchain-text-splitters>=1.1.2,<2",
	"langchain-ollama>=1.1.0,<2",
	"langchain-chroma>=1.1.0,<2",
	"matplotlib>=3.10.9,<4",
	"langchain>=1.2.18,<2",
	"langchain-classic>=1.0.7,<2",
	"langchain-community>=0.4.1,<0.5",
	"rank-bm25>=0.2.2,<0.3",
	"llama-index>=0.14.21,<0.15",
	"llama-index-embeddings-huggingface>=0.7.0,<0.8",
	"transformers>=5.8.0,<6",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["chroma*", "data*", "documents*", "experiments*", "utils*"]
